--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -24,13 +24,15 @@ JobsUI.buttonAddRow.toolTipText=Add an empty pattern
 JobsUI.buttonAddRow2.mnemonic=A
 JobsUI.buttonAddRow2.text=Add
 JobsUI.buttonAddRow2.toolTipText=Add an empty pattern
-JobsUI.buttonNew.mnemonic=N
 JobsUI.buttonCopy.mnemonic=C
 JobsUI.buttonCopy.text=Copy
 JobsUI.buttonCopy.toolTipText=Copy an existing job configuration
 JobsUI.buttonDelete.mnemonic=D
 JobsUI.buttonDelete.text=Delete
 JobsUI.buttonDelete.toolTipText=Delete a job configuration
+JobsUI.buttonNew.mnemonic=N
+JobsUI.buttonNew.text=New
+JobsUI.buttonNew.toolTipText=Add new job configuration
 JobsUI.buttonRemoveRow.mnemonic=E
 JobsUI.buttonRemoveRow.text=Remove
 JobsUI.buttonRemoveRow.toolTipText=Delete one or more patterns
@@ -40,8 +42,6 @@ JobsUI.buttonRemoveRow2.toolTipText=Delete one or more patterns
 JobsUI.buttonRun.mnemonic=R
 JobsUI.buttonRun.text=Run
 JobsUI.buttonRun.toolTipText=Execute the selected configuration on the selected Browser item(s)
-JobsUI.buttonNew.text=New
-JobsUI.buttonNew.toolTipText=Add new job configuration
 JobsUI.cancelButton.text=Cancel
 JobsUI.comboBox1.prototypeDisplayValue=Publisher\nSubscriber
 JobsUI.labelHelp.toolTipText=Job help
@@ -69,14 +69,20 @@ JunkRemover.button.RemoveRow.toolTipText=Delete one or more patterns
 JunkRemover.button.Run.mnemonic=R
 JunkRemover.button.Run.text=Run
 JunkRemover.button.Run.toolTipText=Execute the selected configuration on the selected Browser item(s)
+JunkRemover.cancel.changes=Cancel all changes?
+JunkRemover.cannot.run.on=Cannot run on 
 JunkRemover.case=Case?
 JunkRemover.displayName=Junk Remover
+JunkRemover.error.parsing.junk.remover.tool=Error parsing Junk Remover tool: 
 JunkRemover.error.saving.configuration=Error saving configuration
 JunkRemover.help=Junk Remover Help
 JunkRemover.junk.pattern=Junk Pattern
 JunkRemover.labelHelp.toolTipText=Tool help
+JunkRemover.please.rename.the.existing=Please rename the existing 
+JunkRemover.run.on.N.items=Run "{0}" on {1} {2} items?
 JunkRemover.that.configuration.already.exists=That configuration already exists
 JunkRemover.title=Junk Remover
+JunkRemover.untitled=Untitled
 MainFrame.cancelling.transfers.at.user.request=Cancelling transfer(s) at user request
 MainFrame.transfers.are.active.are.you.sure=Transfer(s) are active. Are you sure you want to end the program?
 NavHelp.button.Ok.mnemonic=O
@@ -148,15 +154,16 @@ Navigator.button.Run.text=Run
 Navigator.button.Run.toolTipText=Process selected job
 Navigator.button.Up.toolTipText=Up to parent (Alt-Up)
 Navigator.checkBox.DryRun.mnemonic=D
-Navigator.checkBox.DryRun.text=Dry-run
 Navigator.controls.help.title=Navigator Controls
 Navigator.detected.local.system.as=Detected local system as 
 Navigator.displaying=Displaying Navigator
+Navigator.dryrun=Dry-run
 Navigator.error.launching.browser=Error launching browser
 Navigator.error.writing.hint=Error writing Hint: 
 Navigator.initialized=Initialized Navigator
 Navigator.label.StatusLeft.text=Status Left
 Navigator.label.StatusRight.text=Status Right
+Navigator.libraries=\ librarie(s)
 Navigator.menu.About.mnemonic=A
 Navigator.menu.About.text=About
 Navigator.menu.AddBookmark.mnemonic=A
@@ -182,12 +189,9 @@ Navigator.menu.Duplicates.mnemonic=D
 Navigator.menu.Duplicates.text=Duplicate Finder ...
 Navigator.menu.Edit.mnemonic=E
 Navigator.menu.Edit.text=Edit
-Navigator.menu.ExternalTools.mnemonic=E
-Navigator.menu.ExternalTools.text=External Tools ...
+Navigator.menu.ExternalTools.text=Manage External Tools ...
 Navigator.menu.File.mnemonic=F
 Navigator.menu.File.text=File
-Navigator.menu.Quit.mnemonic=Q
-Navigator.menu.Quit.text=Quit
 Navigator.menu.Find.mnemonic=F
 Navigator.menu.Find.text=Find ...
 Navigator.menu.GitHubProject.mnemonic=G
@@ -212,7 +216,7 @@ Navigator.menu.New.folder.error.creating=Error creating
 Navigator.menu.New.folder.for=New folder for 
 Navigator.menu.New.folder.mnemonic=N
 Navigator.menu.New.folder.please.select.a.single.destination.for.a.new.folder=Please select a single destination for a new folder
-Navigator.menu.New.folder.select.library.source=Select one of the {0} sources defined for library {1}:
+Navigator.menu.New.folder.select.library.source=Select one of the {0} sources for library {1}:
 Navigator.menu.New.folder.text=New Folder ...
 Navigator.menu.Open.hint.keys.error.opening.hint.keys=Error opening hint keys: 
 Navigator.menu.Open.hint.keys.files=ELS Hint Keys (*.keys)
@@ -245,9 +249,11 @@ Navigator.menu.OpenSubscriber.text=Open Subscriber ...
 Navigator.menu.Paste.mnemonic=P
 Navigator.menu.Paste.text=Paste
 Navigator.menu.PlexGenerator.mnemonic=P
-Navigator.menu.PlexGenerator.text=Plex Profile Generator ...
+Navigator.menu.PlexGenerator.text=Plex Profile Generator
 Navigator.menu.Progress.mnemonic=P
 Navigator.menu.Progress.text=Progress
+Navigator.menu.Quit.mnemonic=Q
+Navigator.menu.Quit.text=Quit
 Navigator.menu.QuitTerminate.mnemonic=X
 Navigator.menu.QuitTerminate.text=Quit & Exit Remote
 Navigator.menu.Refresh.mnemonic=R
@@ -286,13 +292,16 @@ Navigator.menu.View.mnemonic=V
 Navigator.menu.View.text=View
 Navigator.menu.Windows.mnemonic=W
 Navigator.menu.Windows.text=Window
+Navigator.menuItemEmptyFinder.mnemonic=E
+Navigator.menuItemEmptyFinder.text=Empty Directory Finder ...
+Navigator.menuItemExternalTools.displayedMnemonicIndex=9
+Navigator.menuItemExternalTools.mnemonic=T
 Navigator.open.error.file.not.found=File not found: 
 Navigator.open.error.select.a.file.only=Select a file only
 Navigator.panel.CollectionOne.tab.mnemonic=1
 Navigator.panel.CollectionOne.tab.title=Collection 1
 Navigator.panel.CollectionTwo.tab.mnemonic=3
 Navigator.panel.CollectionTwo.tab.title=Collection 3
-Navigator.panel.Libraries.tab.mnemonic=I
 Navigator.panel.SystemOne.tab.mnemonic=2
 Navigator.panel.SystemOne.tab.title=Publisher 2
 Navigator.panel.SystemTwo.tab.mnemonic=4
@@ -317,6 +326,7 @@ Navigator.popupMenu.Rename.mnemonic=R
 Navigator.popupMenu.Rename.text=Rename ...
 Navigator.popupMenu.Touch.mnemonic=T
 Navigator.popupMenu.Touch.text=Touch Date/Time
+Navigator.publisher=Publisher
 Navigator.remote.lowercase=remote
 Navigator.scrollPane.Log.tab.mnemonic=L
 Navigator.scrollPane.Log.tab.title=Log
@@ -324,18 +334,20 @@ Navigator.scrollPane.Properties.tab.mnemonic=P
 Navigator.scrollPane.Properties.tab.title=Properties
 Navigator.splitPane.Backup.tab.mnemonic=A
 Navigator.splitPane.Backup.tab.title=BackUp
-Navigator.splitPane.Browser.tab.title=Browser
 Navigator.splitPane.Browser.tab.mnemonic=R
-Navigator.splitPane.Libraries.tab.title=Libraries
+Navigator.splitPane.Browser.tab.title=Browser
 Navigator.splitPane.Libraries.tab.mnemonic=I
+Navigator.splitPane.Libraries.tab.title=Libraries
+Navigator.subscriber=Subscriber
 Navigator.textField.Location.toolTipText=Location
+Navigator.workstation=Workstation
 Progress.title=Progress
 Properties.drives=Drives: 
 Properties.free=Free: 
 Properties.libraries=Libraries: 
 Properties.path=Path: 
 Properties.size=Size: 
-Properties.source=Source:
+Properties.sources=Source(s): {0}
 Properties.type=Type: 
 Settings.appearance.tab.title=Appearance
 Settings.backupPanel.tab.title=Backup
@@ -405,8 +417,3 @@ Transfer.would.copy=Would copy
 Transfer.would.mv.directory.file=\  > Would mv {0, choice, 0#directory |1#file }
 Transfer.would.rm.directory=\  > Would rm directory: 
 Transfer.would.rm.file=\  > Would rm file: 
-JunkRemover.cannot.run.on=Cannot run on 
-JunkRemover.run.on.N.items=Run "{0}" on {1} {2} items?
-JunkRemover.log.junk.remover.command=Junk Remover "{0}": {1}
-Navigator.subscriber=Subscriber
-Navigator.publisher=Publisher
