Progress on Bookmarks as requested; next is finishing Junk Remover; added command-line build with ant

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -3,6 +3,7 @@
 # Trailing spaces are important
 #
 About.title=About
+Browser.bookmark.item=Bookmark {0} item
 Browser.computer=Computer
 Browser.dry.run=\ (dry-run)
 Browser.error.launching.item=Error launching item
@@ -417,3 +418,5 @@ Transfer.would.copy=Would copy
 Transfer.would.mv.directory.file=\  > Would mv {0, choice, 0#directory |1#file }
 Transfer.would.rm.directory=\  > Would rm directory: 
 Transfer.would.rm.file=\  > Would rm file: 
+Browser.please.select.a.single.item.to.bookmark=Please select a single item to bookmark
+Browser.bookmark.name=Bookmark name: 
