--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -229,7 +229,7 @@ Navigator.menu.Open.publisher.files=ELS Library files (*.json)
 Navigator.menu.Open.publisher.system.type=System type:
 Navigator.menu.Open.publisher.workstation.radio.tooltip=Running on a workstation
 Navigator.menu.Open.publisher.workstation.radio=Workstation
-Navigator.menu.Open.publisher=Open ELS Publisher Library
+Navigator.menu.Open.publisher=Open ELS Publisher
 Navigator.menu.Open.subscriber.close.current.remote.connection=Close current remote connection?
 Navigator.menu.Open.subscriber.connection.checkbox.tooltip=Be sure an ELS Subscriber Listener (--remote S) is running on the remote system
 Navigator.menu.Open.subscriber.connection.checkbox=&nbsp;&nbsp;Remote<br/>Connection&nbsp;&nbsp;
@@ -238,7 +238,7 @@ Navigator.menu.Open.subscriber.files=ELS Library files (*.json)
 Navigator.menu.Open.subscriber.please.open.a.publisher.library.first=Please open a Publisher Library first
 Navigator.menu.Open.subscriber.remote.subscriber.failed.to.connect=Remote subscriber failed to connect
 Navigator.menu.Open.subscriber.subscriber.sftp.failed.to.connect=Subscriber sftp failed to connect
-Navigator.menu.Open.subscriber=Open ELS Subscriber Library
+Navigator.menu.Open.subscriber=Open ELS Subscriber
 Navigator.menu.OpenHintKeys.mnemonic=K
 Navigator.menu.OpenHintKeys.text=Open Hint Keys ...
 Navigator.menu.OpenHintServer.mnemonic=H
