--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -3,7 +3,6 @@
 # Trailing spaces are important
 #
 About.title=About
-Browser.bookmark.item=Bookmark {0} item
 Browser.computer=Computer
 Browser.dry.run=\ (dry-run)
 Browser.error.launching.item=Error launching item
@@ -168,11 +167,11 @@ Navigator.libraries=\ librarie(s)
 Navigator.menu.About.mnemonic=A
 Navigator.menu.About.text=About
 Navigator.menu.AddBookmark.mnemonic=A
-Navigator.menu.AddBookmark.text=Add current location
+Navigator.menu.AddBookmark.text=Add current location ...
 Navigator.menu.Bookmarks.mnemonic=B
 Navigator.menu.Bookmarks.text=Bookmarks
 Navigator.menu.BookmarksManage.mnemonic=M
-Navigator.menu.BookmarksManage.text=Manage ...
+Navigator.menu.BookmarksManage.text=Delete bookmarks ...
 Navigator.menu.Controls.mnemonic=C
 Navigator.menu.Controls.text=Controls
 Navigator.menu.Copy.mnemonic=C
@@ -420,3 +419,6 @@ Transfer.would.rm.directory=\  > Would rm directory:
 Transfer.would.rm.file=\  > Would rm file: 
 Browser.please.select.a.single.item.to.bookmark=Please select a single item to bookmark
 Browser.bookmark.name=Bookmark name: 
+Browser.error.saving.bookmarks=Error saving Bookmarks: 
+Navigator.select.one.or.more.bookmarks.to.delete=Select one or more bookmarks to delete:
+Navigator.delete.bookmarks=Delete Bookmarks
