Fixed minor Bookmarks bug; progress on Junk Remover

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -3,20 +3,24 @@
 # Trailing spaces are important
 #
 About.title=About
+Browser.bookmark.name=bookmark name: 
 Browser.computer=Computer
 Browser.dry.run=\ (dry-run)
 Browser.error.launching.item=Error launching item
+Browser.error.saving.bookmarks=Error saving Bookmarks: 
 Browser.error=Error: 
 Browser.home=Home
 Browser.launch.of.items.not.supported=\ items not supported
 Browser.launch.of=Launch of 
 Browser.open.a.publisher=--Open a publisher--
 Browser.open.a.subscriber=--Open a subscriber--
+Browser.please.select.a.single.item.to.bookmark=Please select a single item to bookmark
 Browser.skipping=Skipping: 
 Browser.system=System
 BrowserTable.column.modified=Modified
 BrowserTable.column.name=Name
 BrowserTable.column.size=Size
+Browsers.add.bookmark=Add Bookmark
 JobsUI.button1.text=^
 JobsUI.buttonAddRow.mnemonic=A
 JobsUI.buttonAddRow.text=Add
@@ -155,6 +159,7 @@ Navigator.button.Run.toolTipText=Process selected job
 Navigator.button.Up.toolTipText=Up to parent (Alt-Up)
 Navigator.checkBox.DryRun.mnemonic=D
 Navigator.controls.help.title=Navigator Controls
+Navigator.delete.bookmarks=Delete Bookmarks
 Navigator.detected.local.system.as=Detected local system as 
 Navigator.displaying=Displaying Navigator
 Navigator.dryrun=Dry-run
@@ -165,7 +170,7 @@ Navigator.label.StatusLeft.text=Status Left
 Navigator.label.StatusRight.text=Status Right
 Navigator.libraries=\ librarie(s)
 Navigator.menu.About.mnemonic=A
-Navigator.menu.About.text=About
+Navigator.menu.About.text=About ...
 Navigator.menu.AddBookmark.mnemonic=A
 Navigator.menu.AddBookmark.text=Add current location ...
 Navigator.menu.Bookmarks.mnemonic=B
@@ -173,7 +178,7 @@ Navigator.menu.Bookmarks.text=Bookmarks
 Navigator.menu.BookmarksManage.mnemonic=M
 Navigator.menu.BookmarksManage.text=Delete bookmarks ...
 Navigator.menu.Controls.mnemonic=C
-Navigator.menu.Controls.text=Controls
+Navigator.menu.Controls.text=Controls ...
 Navigator.menu.Copy.mnemonic=C
 Navigator.menu.Copy.text=Copy
 Navigator.menu.Cut.mnemonic=U
@@ -195,7 +200,7 @@ Navigator.menu.File.text=File
 Navigator.menu.Find.mnemonic=F
 Navigator.menu.Find.text=Find ...
 Navigator.menu.GitHubProject.mnemonic=G
-Navigator.menu.GitHubProject.text=GitHub Project
+Navigator.menu.GitHubProject.text=GitHub project
 Navigator.menu.Help.mnemonic=H
 Navigator.menu.Help.text=Help
 Navigator.menu.Jobs.mnemonic=J
@@ -292,6 +297,10 @@ Navigator.menu.View.mnemonic=V
 Navigator.menu.View.text=View
 Navigator.menu.Windows.mnemonic=W
 Navigator.menu.Windows.text=Window
+Navigator.menuItemUpdates.mnemonic=U
+Navigator.menuItemUpdates.text=Check for updates ...
+Navigator.menuItemDocumentation.toolTipText=External link
+Navigator.menuItemGitHubProject.toolTipText=External link
 Navigator.menuItemEmptyFinder.mnemonic=E
 Navigator.menuItemEmptyFinder.text=Empty Directory Finder ...
 Navigator.menuItemExternalTools.displayedMnemonicIndex=9
@@ -332,6 +341,7 @@ Navigator.scrollPane.Log.tab.mnemonic=L
 Navigator.scrollPane.Log.tab.title=Log
 Navigator.scrollPane.Properties.tab.mnemonic=P
 Navigator.scrollPane.Properties.tab.title=Properties
+Navigator.select.one.or.more.bookmarks.to.delete=Select one or more bookmarks to delete:
 Navigator.splitPane.Backup.tab.mnemonic=A
 Navigator.splitPane.Backup.tab.title=BackUp
 Navigator.splitPane.Browser.tab.mnemonic=R
@@ -417,8 +427,3 @@ Transfer.would.copy=Would copy
 Transfer.would.mv.directory.file=\  > Would mv {0, choice, 0#directory |1#file }
 Transfer.would.rm.directory=\  > Would rm directory: 
 Transfer.would.rm.file=\  > Would rm file: 
-Browser.please.select.a.single.item.to.bookmark=Please select a single item to bookmark
-Browser.bookmark.name=Bookmark name: 
-Browser.error.saving.bookmarks=Error saving Bookmarks: 
-Navigator.select.one.or.more.bookmarks.to.delete=Select one or more bookmarks to delete:
-Navigator.delete.bookmarks=Delete Bookmarks
