Junk Remover Tool completed

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -72,18 +72,25 @@ JunkRemover.button.RemoveRow.text=Remove
 JunkRemover.button.RemoveRow.toolTipText=Delete one or more patterns
 JunkRemover.button.Run.mnemonic=R
 JunkRemover.button.Run.text=Run
-JunkRemover.button.Run.toolTipText=Execute the selected configuration on the selected Browser item(s)
+JunkRemover.button.Run.toolTipText=Execute the selected configuration on the selected Browser locations(s)
 JunkRemover.cancel.changes=Cancel all changes?
 JunkRemover.cannot.run.on=Cannot run on 
 JunkRemover.case=Case?
+JunkRemover.config.cancelled=Junk Remover {0} cancelled
+JunkRemover.delete.configuration=Delete Configuration
 JunkRemover.displayName=Junk Remover
 JunkRemover.error.parsing.junk.remover.tool=Error parsing Junk Remover tool: 
 JunkRemover.error.saving.configuration=Error saving configuration
+JunkRemover.error.writing=Error writing: 
+JunkRemover.exception=Junk Remover exception: 
 JunkRemover.help=Junk Remover Help
 JunkRemover.junk.pattern=Junk Pattern
 JunkRemover.labelHelp.toolTipText=Tool help
+JunkRemover.nothing.selected.in.browser=Nothing selected in Browser
 JunkRemover.please.rename.the.existing=Please rename the existing 
-JunkRemover.run.on.N.items=Run "{0}" on {1} {2} items?
+JunkRemover.repository.does.not.appear.to.be.loaded=Repository does not appear to be loaded
+JunkRemover.run.on.N.locations=Run "{0}" on {1} {2} location(s)?
+JunkRemover.stop.running.junk.remover=Stop currently running Junk Remover?
 JunkRemover.that.configuration.already.exists=That configuration already exists
 JunkRemover.title=Junk Remover
 JunkRemover.untitled=Untitled
@@ -297,14 +304,14 @@ Navigator.menu.View.mnemonic=V
 Navigator.menu.View.text=View
 Navigator.menu.Windows.mnemonic=W
 Navigator.menu.Windows.text=Window
-Navigator.menuItemUpdates.mnemonic=U
-Navigator.menuItemUpdates.text=Check for updates ...
 Navigator.menuItemDocumentation.toolTipText=External link
-Navigator.menuItemGitHubProject.toolTipText=External link
 Navigator.menuItemEmptyFinder.mnemonic=E
 Navigator.menuItemEmptyFinder.text=Empty Directory Finder ...
 Navigator.menuItemExternalTools.displayedMnemonicIndex=9
 Navigator.menuItemExternalTools.mnemonic=T
+Navigator.menuItemGitHubProject.toolTipText=External link
+Navigator.menuItemUpdates.mnemonic=U
+Navigator.menuItemUpdates.text=Check for updates ...
 Navigator.open.error.file.not.found=File not found: 
 Navigator.open.error.select.a.file.only=Select a file only
 Navigator.panel.CollectionOne.tab.mnemonic=1
