Several Junk Remover Tool tweaks; Jobs GUI Run and Generate remaining

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -3,6 +3,7 @@
 # Trailing spaces are important
 #
 About.title=About
+Browser.add.bookmark=Add Bookmark
 Browser.bookmark.name=bookmark name: 
 Browser.computer=Computer
 Browser.dry.run=\ (dry-run)
@@ -15,48 +16,60 @@ Browser.launch.of=Launch of
 Browser.open.a.publisher=--Open a publisher--
 Browser.open.a.subscriber=--Open a subscriber--
 Browser.please.select.a.single.item.to.bookmark=Please select a single item to bookmark
+Browser.select.one.or.more.bookmarks.to.delete=Select one or more bookmarks to delete:
 Browser.skipping=Skipping: 
 Browser.system=System
 BrowserTable.column.modified=Modified
 BrowserTable.column.name=Name
 BrowserTable.column.size=Size
-Browsers.add.bookmark=Add Bookmark
+Job.config.cancelled=Job {0} cancelled
+JobsUI.add.N.origins=Add {0} {1} origins?
+JobsUI.any.publisher=Any publisher
+JobsUI.any.subscriber=Any subscriber
 JobsUI.buttonAddOrigin.mnemonic=D
 JobsUI.buttonAddOrigin.text=Add
-JobsUI.buttonAddOrigin.toolTipText=Add a origin location
-JobsUI.buttonAddTool.mnemonic=A
-JobsUI.buttonAddTool.text=Add
-JobsUI.buttonAddTool.toolTipText=Add a Tool
+JobsUI.buttonAddOrigin.toolTipText=Add selected orgin(s)
+JobsUI.buttonAddTask.mnemonic=A
+JobsUI.buttonAddTask.text=Add
+JobsUI.buttonAddTask.toolTipText=Add a task
 JobsUI.buttonCopy.mnemonic=C
 JobsUI.buttonCopy.text=Copy
 JobsUI.buttonCopy.toolTipText=Copy an existing job configuration
 JobsUI.buttonDelete.mnemonic=D
 JobsUI.buttonDelete.text=Delete
 JobsUI.buttonDelete.toolTipText=Delete a job configuration
-JobsUI.buttonNew.mnemonic=N
-JobsUI.buttonNew.text=New
-JobsUI.buttonNew.toolTipText=Add new job configuration
-JobsUI.buttonRemoveOrigin.mnemonic=E
-JobsUI.buttonRemoveOrigin.text=Remove
-JobsUI.buttonRemoveOrigin.toolTipText=Delete one or more origins
-JobsUI.buttonRemoveTool.mnemonic=E
-JobsUI.buttonRemoveTool.text=Remove
-JobsUI.buttonRemoveTool.toolTipText=Delete one or more Tools
-JobsUI.buttonRun.mnemonic=R
-JobsUI.buttonRun.text=Run
-JobsUI.buttonRun.toolTipText=Execute the selected configuration
 JobsUI.buttonGenerate.mnemonic_2=G
 JobsUI.buttonGenerate.text=Generate
 JobsUI.buttonGenerate.toolTipText=Generate a script from the selected configuration
-JobsUI.buttonToolDown.toolTipText=Move Tool down
-JobsUI.buttonToolUp.toolTipText=Move Tool Up
+JobsUI.buttonNew.mnemonic=N
+JobsUI.buttonNew.text=New
+JobsUI.buttonNew.toolTipText=Add new job configuration
+JobsUI.buttonOriginDown.toolTipText=Move origin down
+JobsUI.buttonOriginUp.toolTipText=Move origin Up
+JobsUI.buttonRemoveOrigin.mnemonic_2=M
+JobsUI.buttonRemoveOrigin.text=Remove
+JobsUI.buttonRemoveOrigin.toolTipText=Delete one or more origins
+JobsUI.buttonRemoveTask.mnemonic=E
+JobsUI.buttonRemoveTask.text=Remove
+JobsUI.buttonRemoveTask.toolTipText=Delete one or more tasks
+JobsUI.buttonRun.mnemonic=R
+JobsUI.buttonRun.text=Run
+JobsUI.buttonRun.toolTipText=Execute the selected configuration
+JobsUI.buttonTaskDown.toolTipText=Move task down
+JobsUI.buttonTaskUp.toolTipText=Move task Up
 JobsUI.cancelButton.text=Cancel
-JobsUI.labelOrigin.text=Origin\:
+JobsUI.current.publisher=Current publisher
+JobsUI.current.subscriber=Current subscriber
+JobsUI.help=Jobs Help
 JobsUI.labelHelp.toolTipText=Job help
-JobsUI.labelTools.text=Tools\:
+JobsUI.labelOrigins.text=Task Origins\:
+JobsUI.labelTasks.text=Tasks\:
 JobsUI.okButton.text=OK
+JobsUI.publisher.or.subscriber=Publisher or Subscriber
+JobsUI.remove.N.origins=Remove {0} origins?
+JobsUI.remove.N.tasks=Remove {0} tasks?
+JobsUI.stop.currently.running.job=Stop currently running Job?
 JobsUI.title=Jobs
-JunkRemover.are.you.sure.you.want.to.delete.configuration=Are you sure you want to delete configuration: 
 JunkRemover.button.AddRow.mnemonic=A
 JunkRemover.button.AddRow.text=Add
 JunkRemover.button.AddRow.toolTipText=Add an empty pattern
@@ -78,24 +91,16 @@ JunkRemover.button.RemoveRow.toolTipText=Delete one or more patterns
 JunkRemover.button.Run.mnemonic=R
 JunkRemover.button.Run.text=Run
 JunkRemover.button.Run.toolTipText=Execute the selected configuration on the selected Browser locations(s)
-JunkRemover.cancel.changes=Cancel all changes?
-JunkRemover.cannot.run.on=Cannot run on 
 JunkRemover.case=Case?
 JunkRemover.config.cancelled=Junk Remover {0} cancelled
-JunkRemover.delete.configuration=Delete Configuration
 JunkRemover.displayName=Junk Remover
-JunkRemover.error.parsing.junk.remover.tool=Error parsing Junk Remover tool: 
-JunkRemover.error.saving.configuration=Error saving configuration
 JunkRemover.error.writing=Error writing: 
 JunkRemover.help=Junk Remover Help
 JunkRemover.junk.pattern=Junk Pattern
 JunkRemover.labelHelp.toolTipText=Tool help
 JunkRemover.nothing.selected.in.browser=Nothing selected in Browser
-JunkRemover.please.rename.the.existing=Please rename the existing 
-JunkRemover.repository.does.not.appear.to.be.loaded=Repository does not appear to be loaded
 JunkRemover.run.on.N.locations=Run "{0}" on {1} {2} location(s)?
 JunkRemover.stop.running.junk.remover=Stop currently running Junk Remover?
-JunkRemover.that.configuration.already.exists=That configuration already exists
 JunkRemover.title=Junk Remover
 MainFrame.cancelling.transfers.at.user.request=Cancelling transfer(s) at user request
 MainFrame.transfers.are.active.are.you.sure=Transfer(s) are active. Are you sure you want to end the program?
@@ -142,7 +147,6 @@ NavTreeNode.items=\ items
 NavTreeNode.library=Library
 NavTreeNode.local=Local 
 NavTreeNode.received.entries.from=\ received entries from 
-NavTreeNode.remote=Remote 
 NavTreeNode.scanning.home.directory=Scanning home directory 
 NavTreeNode.scanning.local.directory=Scanning local directory 
 NavTreeNode.scanning.local.drive=Scanning local drive 
@@ -231,7 +235,7 @@ Navigator.menu.New.folder.error.creating=Error creating
 Navigator.menu.New.folder.for=New folder for 
 Navigator.menu.New.folder.mnemonic=N
 Navigator.menu.New.folder.please.select.a.single.destination.for.a.new.folder=Please select a single destination for a new folder
-Navigator.menu.New.folder.select.library.source=Select one of the {0} sources for library {1}:
+Navigator.menu.New.folder.select.library.source=Select 1 of the {0} sources for library {1}:
 Navigator.menu.New.folder.text=New Folder ...
 Navigator.menu.Open.hint.keys.error.opening.hint.keys=Error opening hint keys: 
 Navigator.menu.Open.hint.keys.files=ELS Hint Keys (*.keys)
@@ -345,20 +349,16 @@ Navigator.popupMenu.Rename.mnemonic=R
 Navigator.popupMenu.Rename.text=Rename ...
 Navigator.popupMenu.Touch.mnemonic=T
 Navigator.popupMenu.Touch.text=Touch Date/Time
-Navigator.publisher=Publisher
-Navigator.remote.lowercase=remote
 Navigator.scrollPane.Log.tab.mnemonic=L
 Navigator.scrollPane.Log.tab.title=Log
 Navigator.scrollPane.Properties.tab.mnemonic=P
 Navigator.scrollPane.Properties.tab.title=Properties
-Navigator.select.one.or.more.bookmarks.to.delete=Select one or more bookmarks to delete:
 Navigator.splitPane.Backup.tab.mnemonic=A
 Navigator.splitPane.Backup.tab.title=BackUp
 Navigator.splitPane.Browser.tab.mnemonic=R
 Navigator.splitPane.Browser.tab.title=Browser
 Navigator.splitPane.Libraries.tab.mnemonic=I
 Navigator.splitPane.Libraries.tab.title=Libraries
-Navigator.subscriber=Subscriber
 Navigator.textField.Location.toolTipText=Location
 Navigator.workstation=Workstation
 Progress.title=Progress
@@ -437,8 +437,22 @@ Transfer.would.copy=Would copy
 Transfer.would.mv.directory.file=\  > Would mv {0, choice, 0#directory |1#file }
 Transfer.would.rm.directory=\  > Would rm directory: 
 Transfer.would.rm.file=\  > Would rm file: 
-Z.exception=Exception: 
-Z.error.writing=Error writing: 
+Z.are.you.sure.you.want.to.delete.configuration=Are you sure you want to delete configuration: 
+Z.cancel.all.changes=Cancel all changes?
+Z.cancel.changes=Cancel Changes
+Z.delete.configuration=Delete Configuration
+Z.cancel.run=Cancel Run
+Z.copy=\ (copy)
 Z.error.parsing=Error parsing: 
-Z.untitled=Untitled
 Z.error.reading=Error reading: 
+Z.error.writing=Error writing: 
+Z.error=Error: 
+Z.exception=Exception: 
+Z.invalid.selection=Invalid selection: 
+Z.please.rename.the.existing=Please rename the existing 
+Z.publisher=Publisher
+Z.remote.lowercase=remote
+Z.remote.uppercase=Remote 
+Z.subscriber=Subscriber
+Z.that.configuration.already.exists=That configuration already exists
+Z.untitled=Untitled
