Commit before Jobs refactor

--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -28,7 +28,7 @@ JobsUI.any.publisher=Any publisher
 JobsUI.any.subscriber=Any subscriber
 JobsUI.buttonAddOrigin.mnemonic=D
 JobsUI.buttonAddOrigin.text=Add
-JobsUI.buttonAddOrigin.toolTipText=Add selected orgin(s)
+JobsUI.buttonAddOrigin.toolTipText=Add selected Browser origin(s)
 JobsUI.buttonAddTask.mnemonic=A
 JobsUI.buttonAddTask.text=Add
 JobsUI.buttonAddTask.toolTipText=Add a task
@@ -456,3 +456,6 @@ Z.remote.uppercase=Remote
 Z.subscriber=Subscriber
 Z.that.configuration.already.exists=That configuration already exists
 Z.untitled=Untitled
+JobsUI.run.as.defined=Run "{0}" as defined?
+JobsUI.job.has.no.tasks=Job has no tasks
+JobsUI.task.has.no.origins=Task has no origins: 
