--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -28,7 +28,7 @@ JobsUI.any.publisher=Any publisher
 JobsUI.any.subscriber=Any subscriber
 JobsUI.buttonAddOrigin.mnemonic=D
 JobsUI.buttonAddOrigin.text=Add
-JobsUI.buttonAddOrigin.toolTipText=Add selected orgin(s)
+JobsUI.buttonAddOrigin.toolTipText=Add selected Browser origin(s)
 JobsUI.buttonAddTask.mnemonic=A
 JobsUI.buttonAddTask.text=Add
 JobsUI.buttonAddTask.toolTipText=Add a task
@@ -61,7 +61,7 @@ JobsUI.cancelButton.text=Cancel
 JobsUI.current.publisher=Current publisher
 JobsUI.current.subscriber=Current subscriber
 JobsUI.help=Jobs Help
-JobsUI.labelHelp.toolTipText=Job help
+JobsUI.labelHelp.toolTipText=Jobs help
 JobsUI.labelOrigins.text=Task Origins\:
 JobsUI.labelTasks.text=Tasks\:
 JobsUI.okButton.text=OK
@@ -456,3 +456,6 @@ Z.remote.uppercase=Remote
 Z.subscriber=Subscriber
 Z.that.configuration.already.exists=That configuration already exists
 Z.untitled=Untitled
+JobsUI.run.as.defined=Run "{0}" as defined?
+JobsUI.job.has.no.tasks=Job has no tasks
+JobsUI.task.has.no.origins=Task has no origins: 
