Basic Jobs done; command line -j job option added

--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -23,6 +23,7 @@ BrowserTable.column.modified=Modified
 BrowserTable.column.name=Name
 BrowserTable.column.size=Size
 Job.config.cancelled=Job {0} cancelled
+Jobs.executing.job=Executing job\: 
 JobsUI.add.N.origins=Add {0} {1} origins?
 JobsUI.any.publisher=Any publisher
 JobsUI.any.subscriber=Any subscriber
@@ -58,17 +59,31 @@ JobsUI.buttonRun.toolTipText=Execute the selected configuration
 JobsUI.buttonTaskDown.toolTipText=Move task down
 JobsUI.buttonTaskUp.toolTipText=Move task Up
 JobsUI.cancelButton.text=Cancel
-JobsUI.current.publisher=Current publisher
-JobsUI.current.subscriber=Current subscriber
+JobsUI.generated=Copy job command line (Ctrl-C)\: 
 JobsUI.help=Jobs Help
-JobsUI.labelHelp.toolTipText=Job help
+JobsUI.job.has.no.tasks=Job has no tasks
+JobsUI.labelHelp.toolTipText=Jobs help
 JobsUI.labelOrigins.text=Task Origins\:
 JobsUI.labelTasks.text=Tasks\:
 JobsUI.okButton.text=OK
-JobsUI.publisher.or.subscriber=Publisher or Subscriber
+JobsUI.pubsub.select.publisher.or.subscriber=Select Publisher or Subscriber
+JobsUI.pubsub.select.publisher=Select Publisher
+JobsUI.pubsub.select.subscriber=Select Subscriber
 JobsUI.remove.N.origins=Remove {0} origins?
 JobsUI.remove.N.tasks=Remove {0} tasks?
+JobsUI.run.as.defined=Run "{0}" as defined?
+JobsUI.select.publisher.or.subscriber.tooltip=Select publisher or subscriber
+JobsUI.select.publisher.or.subscriber=-select publisher or subscriber-
+JobsUI.select.publisher.tooltip=Select publisher
+JobsUI.select.publisher=-select publisher-
+JobsUI.select.subscriber.tooltip=Select subscriber
+JobsUI.select.subscriber=-select subscriber-
+JobsUI.select.tool=Select tool\:
+JobsUI.specific.publisher=Specific publisher
+JobsUI.specific.subscriber=Specific subscriber
 JobsUI.stop.currently.running.job=Stop currently running Job?
+JobsUI.task.has.no.origins=Task has no origins: 
+JobsUI.task.has.no.publisher.and.or.subscriber=Task has no publisher and/or subscriber\: 
 JobsUI.title=Jobs
 JunkRemover.button.AddRow.mnemonic=A
 JunkRemover.button.AddRow.text=Add
@@ -101,7 +116,9 @@ JunkRemover.labelHelp.toolTipText=Tool help
 JunkRemover.nothing.selected.in.browser=Nothing selected in Browser
 JunkRemover.run.on.N.locations=Run "{0}" on {1} {2} location(s)?
 JunkRemover.stop.running.junk.remover=Stop currently running Junk Remover?
+JunkRemover.task.definition.and.loaded.repository.do.not.match=Task definition and loaded repository do not match
 JunkRemover.title=Junk Remover
+JunkRemover.uses.only.one.repository={0} uses only one repository
 MainFrame.cancelling.transfers.at.user.request=Cancelling transfer(s) at user request
 MainFrame.transfers.are.active.are.you.sure=Transfer(s) are active. Are you sure you want to end the program?
 NavHelp.button.Ok.mnemonic=O
@@ -401,6 +418,8 @@ Settings.sortFoldersBeforeFilesLabel.text=Sort folders before files\:
 Settings.sortReverseLabel.text=Sort reverse\:
 Settings.textField.HintButtonColor.toolTipText=RGB color in hexadecimal
 Settings.this.title=Navigator Settings
+Task.no.repository.is.loaded=No repository is loaded
+Task.tool.not.found=Tool not found: 
 ToolUI.button.Copy.text=Copy
 ToolUI.button.Delete.text=Delete
 ToolUI.button.DeleteRow.text=Delete
@@ -440,15 +459,16 @@ Transfer.would.rm.file=\  > Would rm file:
 Z.are.you.sure.you.want.to.delete.configuration=Are you sure you want to delete configuration: 
 Z.cancel.all.changes=Cancel all changes?
 Z.cancel.changes=Cancel Changes
-Z.delete.configuration=Delete Configuration
 Z.cancel.run=Cancel Run
 Z.copy=\ (copy)
+Z.delete.configuration=Delete Configuration
 Z.error.parsing=Error parsing: 
 Z.error.reading=Error reading: 
 Z.error.writing=Error writing: 
 Z.error=Error: 
 Z.exception=Exception: 
-Z.invalid.selection=Invalid selection: 
+Z.invalid.selection=Invalid selection\: 
+Z.not.found=\ not found
 Z.please.rename.the.existing=Please rename the existing 
 Z.publisher=Publisher
 Z.remote.lowercase=remote
@@ -456,6 +476,3 @@ Z.remote.uppercase=Remote
 Z.subscriber=Subscriber
 Z.that.configuration.already.exists=That configuration already exists
 Z.untitled=Untitled
-JobsUI.run.as.defined=Run "{0}" as defined?
-JobsUI.job.has.no.tasks=Job has no tasks
-JobsUI.task.has.no.origins=Task has no origins: 
