--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -186,6 +186,8 @@ Navigator.controls.help.title=Navigator Controls
 Navigator.delete.bookmarks=Delete Bookmarks
 Navigator.detected.local.system.as=Detected local system as 
 Navigator.displaying=Displaying Navigator
+Navigator.dryrun=Dry-run
+Navigator.dryrun.tooltip=Run but do not perform any actions
 Navigator.error.launching.browser=Error launching browser
 Navigator.error.writing.hint=Error writing Hint: 
 Navigator.initialized=Initialized Navigator
