Changes to Jobs, Junk Remover and Settings; working on completing running Jobs

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -79,8 +79,9 @@ JobsUI.select.publisher=-select publisher-
 JobsUI.select.subscriber.tooltip=Select subscriber
 JobsUI.select.subscriber=-select subscriber-
 JobsUI.select.tool=Select tool\:
-JobsUI.specific.publisher=Specific publisher
-JobsUI.specific.subscriber=Specific subscriber
+JobsUI.publisher.specific=Specific publisher
+JobsUI.subscriber.local=Local Subscriber
+JobsUI.subscriber.remote=Remote Subscriber
 JobsUI.stop.currently.running.job=Stop currently running Job?
 JobsUI.task.has.no.origins=Task has no origins: 
 JobsUI.task.has.no.publisher.and.or.subscriber=Task has no publisher and/or subscriber\: 
@@ -178,9 +179,10 @@ NavTreeNode.system=System
 NavTreeNode.unknown=Unknown
 Navigator.button.Back.toolTipText=Back (Alt-Left)
 Navigator.button.Forward.toolTipText=Forward (Alt-Right)
+Navigator.button.HintTracking.disabled.tooltip=Hint Tracking is off
+Navigator.button.HintTracking.enabled.tooltip=Hint Tracking is on
 Navigator.button.HintTracking.mnemonic=K
 Navigator.button.HintTracking.text=\ Hint Tracking
-Navigator.button.HintTracking.toolTipText=Toggle creating hints based on actions in Collections
 Navigator.button.Up.toolTipText=Up to parent (Alt-Up)
 Navigator.controls.help.title=Navigator Controls
 Navigator.delete.bookmarks=Delete Bookmarks
@@ -193,7 +195,7 @@ Navigator.error.writing.hint=Error writing Hint:
 Navigator.initialized=Initialized Navigator
 Navigator.label.StatusLeft.text=Status Left
 Navigator.label.StatusRight.text=Status Right
-Navigator.libraries=\ librarie(s)
+Navigator.libraries=\ libraries
 Navigator.menu.About.mnemonic=A
 Navigator.menu.About.text=About ...
 Navigator.menu.AddBookmark.mnemonic=A
@@ -397,6 +399,7 @@ Settings.generalPanel.tab.title=General
 Settings.hideFilesInTreeLabel.text=Hide files in tree\:
 Settings.hideHiddenFilesLabel.text=Hide hidden files\:
 Settings.hintButton.ColorLabel.text=Hint Tracking button color\:
+Settings.tabPlacementlabel.text=Tab placement\:
 Settings.librariesPanel.tab.title=Libraries
 Settings.localeLabel.text=Locale\:
 Settings.lookFeelLabel.text=Look 'n Feel\:
@@ -453,15 +456,19 @@ Transfer.would.rm.file=\  > Would rm file:
 Z.are.you.sure.you.want.to.delete.configuration=Are you sure you want to delete configuration: 
 Z.cancel.all.changes=Cancel all changes?
 Z.cancel.changes=Cancel Changes
+Z.cannot.find=Cannot find\: 
 Z.cancel.run=Cancel Run
+Z.completed=\ completed
 Z.copy=\ (copy)
 Z.delete.configuration=Delete Configuration
-Z.error.parsing=Error parsing: 
-Z.error.reading=Error reading: 
-Z.error.writing=Error writing: 
-Z.error=Error: 
-Z.exception=Exception: 
+Z.error.parsing=Error parsing\: 
+Z.error.reading=Error reading\: 
+Z.error.writing=Error writing\: 
+Z.error=Error:\ 
+Z.exception=Exception\: 
 Z.invalid.selection=Invalid selection\: 
+Z.local.lowercase=local
+Z.local.uppercase=Local 
 Z.not.found=\ not found
 Z.please.rename.the.existing=Please rename the existing 
 Z.publisher=Publisher
@@ -470,3 +477,7 @@ Z.remote.uppercase=Remote
 Z.subscriber=Subscriber
 Z.that.configuration.already.exists=That configuration already exists
 Z.untitled=Untitled
+Settings.tabplacement.top=Top
+Settings.tabplacement.bottom=Bottom
+Settings.tabplacement.left=Left
+Settings.tabplacement.right=Right
